--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -17,7 +17,7 @@ button,
   border: none;
   font-weight: bold;
 }
-input[type="submit"]{
+input[type="submit"], .button{
   background-color: green;
   color:white;
   margin:4px 0 4px 0;
