--- a/app/views/ofxes/index.html.slim
+++ b/app/views/ofxes/index.html.slim
@@ -20,7 +20,7 @@
           td = ofx.statement_date
           td = ofx.hash_data[:date_range] ||= ofx.hash_data[:tran_range]
           td = ofx.hash_data[:fit_range]
-          td.tright = ofx.hash_data[:balance].blank? ? 0 : Ledger.money(ofx.hash_data[:balance])
+          td.tright = ofx.hash_data[:balance].blank? ? 0 : Amount.money(ofx.hash_data[:balance])
           td = ofx.reconciled_date
           td.actions
             = link_to 'Show', ofx
