added voucher  cleaned up reports
voucher is a combo of deposit and summarypl

--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -1,5 +1,5 @@
 .w3-container.w3-white.min-height
-  #reports.w3-row.w3-row-padding[data-controller="rangepicker report" data-date="#{Date.today.to_s}"]
+  #reports.w3-row.w3-row-padding[data-controller="rangepicker" data-date="#{Date.today.to_s}"]
     .w3-col.s5
       h5.strong Under Construction
 
