--- a/app/views/reports/summarypl.html.slim
+++ b/app/views/reports/summarypl.html.slim
@@ -1,16 +1,17 @@
-.w3-container.w3-white.min-height
+.w3-container.w3-white
   .w3-row-padding
     .s5.w3-col.fs8
       .strong 
-        = "Profit & Loss For Period Covering #{params[:from] ||= Date.today.beginning_of_year} to #{params[:to] ||= Date.today}"
-        button.lime-link-button.w3-right.noprint[onclick="goBack()"] Back Page
+        = "Profit & Loss For Period Covering #{@from || params[:from] ||= Date.today.beginning_of_year} to #{@to || params[:to] ||= Date.today}"
+        - unless @deposits.present?
+          button.lime-link-button.w3-right.noprint[onclick="goBack()"] Back Page
 
       = profit_loss_report(@report)
 
 
     .s6.w3-col
       table.smalltable7.fs8.w90p
-        caption.fs7 = "Account Summary - From: #{params[:from] || Date.today.beginning_of_year}  To: #{params[:to] || Date.today}"
+        caption.fs7 = "Account Summary - From: #{@from || params[:from] || Date.today.beginning_of_year}  To: #{@to || params[:to] || Date.today}"
         tr
           td.strong Account
           th BBegin
@@ -30,9 +31,10 @@
             td.tright = to_money acct[:ending]
 
 
-javascript:
-  function goBack() {
-    window.history.back();
-  }
+- unless @deposits.present?
+  javascript:
+    function goBack() {
+      window.history.back();
+    }
 
 
