--- a/app/views/accounts/index_table.html.slim
+++ b/app/views/accounts/index_table.html.slim
@@ -7,7 +7,7 @@
       span.annotate.indent Displays less information and divided by Account Types
 
   table.small-table7
-    thead.fixed
+    thead
       tr
         th Name
         th Type
