--- a/app/assets/stylesheets/accounts.scss
+++ b/app/assets/stylesheets/accounts.scss
@@ -102,7 +102,7 @@ tbody.split-rows {display:none}
 .pl-row {
   .pl-col-acct{
     display: inline-block;
-    width: 40%;
+    width: 25%;
     text-align: left;
     &.p0{ padding-left: 0%;}
     &.p1{ padding-left: 2%;}
@@ -113,7 +113,7 @@ tbody.split-rows {display:none}
   }
   .col-acct{
     display: inline-block;
-    width: 30%;
+    width: 15%;
     text-align: left;
     &.p0{ padding-left: 0vw;}
     &.p1{ padding-left: 1vw;}
@@ -124,7 +124,7 @@ tbody.split-rows {display:none}
   }
   .summary-acct{
     display: inline-block;
-    width: 60%;
+    width: 40%;
     text-align: left;
     &.p0{ padding-left: 0vw;}
     &.p1{ padding-left: 1vw;}
@@ -138,62 +138,64 @@ tbody.split-rows {display:none}
   .pl-summary{
 
     display: inline-block;
-    width: 40%;
+    width: 50%;
     text-align: right;
   }
   
   .pl-col-11 {
 
     display: inline-block;
-    width: calc( 15% * 1);
+    width: calc( 12% * 1);
     text-align: right;
   }
   .pl-col-12 {
 
     display: inline-block;
-    width: calc(15% * 2);
+    width: calc(12% * 2);
     text-align: right;
   }
   .pl-col-22 {
     display: inline-block;
-    width: calc(15% / 1);
+    width: calc(12% / 1);
     text-align: right;
   }
   .pl-col-13 {
     display: inline-block;
-    width: calc(15% * 3);
+    width: calc(12% * 3);
     text-align: right;
   }
   .pl-col-23 {
 
     display: inline-block;
-    width: calc(15% * 2);
+    width: calc(12% * 2);
     text-align: right;
   }
   .pl-col-33 {
 
     display: inline-block;
-    width: calc(15% * 1);
+    width: calc(12% * 1);
     text-align: right;
   }
   .pl-col-tot {
     display: inline-block;
     width: 100% ;
+    color:red;
+
     text-align: right;
   }
   .pl-col-tot-1 {
     display: inline-block;
-    width: 70% ;
+    width: 45% ;
     text-align: right;
   }
   .pl-col-tot-2 {
     display: inline-block;
-    width: 85% ;
+    width: 65% ;
     text-align: right;
   }
   .pl-col-tot-3 {
     display: inline-block;
-    width: 100% ;
+    width: 75% ;
     text-align: right;
   }
 
