--- a/app/views/accounts/ledger/show.html.slim
+++ b/app/views/accounts/ledger/show.html.slim
@@ -5,40 +5,65 @@ div[data-controller="blueBackground"]
       .w3-row-padding
         .m2.w3-col
           - unless @account.placeholder.present?
-            button.w3-left= link_to 'New Entry', new_entry_path(account_id:@account.id),class:'action-button'
+            button[class="w3-left #{btnInfo}"]= link_to 'New Entry', new_entry_path(account_id:@account.id)
           else
             span &nbsp;&nbsp
         
+        .m5.w3-col
+          div data-controller="modal" data-modal-allow-background-close="false" 
+            button[class="#{btnGreen}" data-action="click->modal#open"] Duplicate Entry Search by Desc
+            /! Modal Container
+            .hidden.animated.fadeIn.fixed.inset-0.overflow-y-auto.flex.items-center.justify-center data-action=("click->modal#closeBackground keyup@window->modal#closeWithKeyboard") data-modal-target="container" style=("z-index: 9999;") 
+              /! Modal Inner Container
+              .max-h-screen.w-full.max-w-lg.relative
+                /! Modal Card
+                .m-1.bg-white.rounded.shadow
+                  .p-8[data-autopickr-url-value="/entries/auto_search" 
+                    data-controller="autopickr"
+                    data-autopickr-slen-value="2"
+                    data-autopickr-button-url-value="/demo/edit"]
+                    = render partial:"accounts/ledger/pickr"
+                    div
+                      = check_box_tag('contains','no', false,class:"w3-left", data:{autopickr_target:"contains"},class:'mt-1') 
+                      span.ml-3.align-top Use Contains Search
 
-        .m5.w3-col.w3-dropdown-hover
-          / - unless @account.placeholder.present?
-          /   button.w3-left= link_to 'New Entry', new_entry_path(account_id:@account.id),class:'link-button'
-          /   |&nbsp;&nbsp
-          span.indent.w3-left.strong Search
-          div.w3-left[
-            data-controller="autocomplete entrySearch" 
-            data-autocomplete-url="/entries/auto_search" 
-            data-autocomplete-min-length="2"
-            ]
-            input[
-              type="text" 
-              data-autocomplete-target="input" 
-              placeholder="Entry Description Search" 
-              data-action="change->entrySearch#showSearched" 
-              style="width:300px;margin-right:8px;"
-            ]
-            input[
-            type="hidden" 
-            name="entry_id" 
-            data-autocomplete-target="hidden"
-            data-entrySearch-target="hidden"
-            ]
-            .w3-right.lime-link-button.w3-hide[
-              data-entrySearch-target="showButton" 
-              data-action="click->entrySearch#addSearched" 
-              data-entryID=""
-            ] Duplicate
-            ul.w3-ul.w3-border.w3-dropdown-content.w3-light-grey[data-autocomplete-target="results"]
+                    .flex.justify-end.items-center.flex-wrap.mt-6
+                      button.bg-blue-500.hover:bg-blue-700.text-white.font-bold.py-2.px-4.rounded data-action="click->modal#close"  Cancel
+
+
+
+
+        / .m5.w3-col.w3-dropdown-hover
+
+          
+        /   / - unless @account.placeholder.present?
+        /   /   button.w3-left= link_to 'New Entry', new_entry_path(account_id:@account.id),class:'link-button'
+        /   /   |&nbsp;&nbsp
+        /   span.indent.w3-left.strong Search
+        /   div.w3-left[
+        /     data-controller="autocomplete entrySearch" 
+        /     data-autocomplete-url="/entries/auto_search" 
+        /     data-autocomplete-min-length="2"
+        /     ]
+        /     input[
+        /       type="text" 
+        /       data-autocomplete-target="input" 
+        /       placeholder="Entry Description Search" 
+        /       data-action="change->entrySearch#showSearched" 
+        /       style="width:300px;margin-right:8px;"
+        /     ]
+        /     input[
+        /     type="hidden" 
+        /     name="entry_id" 
+        /     data-autocomplete-target="hidden"
+        /     data-entrySearch-target="hidden"
+        /     ]
+        /     .w3-right.lime-link-button.w3-hide[
+        /       data-entrySearch-target="showButton" 
+        /       data-action="click->entrySearch#addSearched" 
+        /       data-entryID=""
+        /     ] Duplicate
+        /     ul.w3-ul.w3-border.w3-dropdown-content.w3-light-grey[data-autocomplete-target="results"]
 
 
         .m5.w3-col
@@ -80,21 +105,43 @@ div[data-controller="blueBackground"]
           .strong =  "Account Summary (#{@today})"
           = summary_list(@account)
 
-        .s8.w3-col
-          .w3-row-padding[data-controller="rangepicker"]
-            .s8.w3-col
+        .s8.w3-col.bg-blue-200.p-1
+          .w3-row-padding[data-controller="dateRange" data-dateRange-url-value="accounts//#{@account.id}"]
+            .s7.w3-col
               .strong Filter - Select Period or Pick Date for Report Options
-              .w3-row
-                .s7.w3-col.entry-select = from_period_select
-                .s5.w3-col= text_field_tag :from_date, nil,data:{rangepicker_target:'from_date',controller:'flatpickr'},placeholder:'Pick From Date'
-                .s7.w3-col.entry-select= to_period_select
-                .s5.w3-col= text_field_tag :to_date, nil,data:{rangepicker_target:'to_date',controller:'flatpickr'},placeholder:'Pick To Date'
+              .w3-row-padding
+                .s7.w3-col = from_period_select
+                .s5.w3-col= text_field_tag :from_date, nil,data:{dateRange_target:'from_date',controller:'flatpickr'},placeholder:'Pick From Date', class:'border'
+                .s7.w3-col= to_period_select
+                .s5.w3-col= text_field_tag :to_date, nil,data:{dateRange_target:'to_date',controller:'flatpickr'},placeholder:'Pick To Date', class:'border'
 
-            .s4.w3-col
-              .strong Report Options
-              = select_tag('register',options_for_select(report_select_options(nil,"/accounts/#{@account.id}")),prompt:"Register",data:{action:'rangepicker#selectLedger'},class:'entry-select w3-select')
-              = select_tag('register_pdf',options_for_select(report_select_options(nil,"/accounts/register_pdf/#{@account.id}")),prompt:"Register PDF",data:{action:'rangepicker#selectPDF'},class:'entry-select w3-select')
-              = select_tag('register_pdf',options_for_select(report_select_options(nil,"/accounts/split_register_pdf/#{@account.id}")),prompt:"Split Register PDF",data:{action:'rangepicker#selectSplit'},class:'entry-select w3-select')
+            .s5.w3-col
+              .strong Display Filtered Ledger/Register
+              = content_tag(:button,'Screen', class:"#{btnInfo} mr-2",
+                data:{action:"click->dateRange#assignDisplay"}) 
+              = content_tag(:button,'PDF', class:"#{btnInfo} mr-2",
+                data:{action:"click->dateRange#assignPdf"}) 
+
+              = content_tag(:button,'PDF Split', class:"#{btnInfo} mr-2",
+                data:{action:"click->dateRange#assignSplit"}) 
+
+
+
+        / .s8.w3-col
+        /   .w3-row-padding[data-controller="rangepicker"]
+        /     .s8.w3-col
+        /       .strong Filter - Select Period or Pick Date for Report Options
+        /       .w3-row
+        /         .s7.w3-col.entry-select = from_period_select
+        /         .s5.w3-col= text_field_tag :from_date, nil,data:{rangepicker_target:'from_date',controller:'flatpickr'},placeholder:'Pick From Date'
+        /         .s7.w3-col.entry-select= to_period_select
+        /         .s5.w3-col= text_field_tag :to_date, nil,data:{rangepicker_target:'to_date',controller:'flatpickr'},placeholder:'Pick To Date'
+
+        /     .s4.w3-col
+        /       .strong Report Options
+        /       = select_tag('register',options_for_select(report_select_options(nil,"/accounts/#{@account.id}")),prompt:"Register",data:{action:'rangepicker#selectLedger'},class:'entry-select w3-select')
+        /       = select_tag('register_pdf',options_for_select(report_select_options(nil,"/accounts/register_pdf/#{@account.id}")),prompt:"Register PDF",data:{action:'rangepicker#selectPDF'},class:'entry-select w3-select')
+        /       = select_tag('register_pdf',options_for_select(report_select_options(nil,"/accounts/split_register_pdf/#{@account.id}")),prompt:"Split Register PDF",data:{action:'rangepicker#selectSplit'},class:'entry-select w3-select')
                  
   #ajax.w3-container.w3-white
 
