--- a/app/views/accounts/ledger/show.html.slim
+++ b/app/views/accounts/ledger/show.html.slim
@@ -1,150 +1,92 @@
 div[data-controller="blueBackground"]
-.w3-row-padding.w3-ios-light-grey
-  .w3-row.noprint
-    .s12.w3-col.noprint 
-      .w3-row-padding
-        .m2.w3-col
-          - unless @account.placeholder.present?
-            button[class="w3-left #{btnInfo}"]= link_to 'New Entry', new_entry_path(account_id:@account.id)
-          else
-            span &nbsp;&nbsp
+div.bg-gray-300.grid.grid-cols-4.p-1
+
+  div
+    - unless @account.placeholder.present?
+      button[class="ml-4 #{btnInfo}"]= link_to 'New Entry', new_entry_path(account_id:@account.id)
+    - else
+      span.strong Placeholder Account
         
-        .m5.w3-col
-          div data-controller="modal" data-modal-allow-background-close="false" 
-            button[class="#{btnGreen}" data-action="click->modal#open"] Duplicate Entry Search by Desc
-            /! Modal Container
-            .hidden.animated.fadeIn.fixed.inset-0.overflow-y-auto.flex.items-center.justify-center data-action=("click->modal#closeBackground keyup@window->modal#closeWithKeyboard") data-modal-target="container" style=("z-index: 9999;") 
-              /! Modal Inner Container
-              .max-h-screen.w-full.max-w-lg.relative
-                /! Modal Card
-                .m-1.bg-white.rounded.shadow
-                  .p-8[data-autopickr-url-value="/entries/auto_search" 
-                    data-controller="autopickr"
-                    data-autopickr-slen-value="2"
-                    data-autopickr-button-url-value="/demo/edit"]
-                    = render partial:"accounts/ledger/pickr"
-                    div
-                      = check_box_tag('contains','no', false,class:"w3-left", data:{autopickr_target:"contains"},class:'mt-1') 
-                      span.ml-3.align-top Use Contains Search
+  div data-controller="modal" data-modal-allow-background-close="false" 
+    button[class="#{btnGreen}" data-action="click->modal#open"] Duplicate Entry Search by Desc
+    /! Modal Container
+    div[
+      class="hidden animated fadeIn fixed inset-0 overflow-y-auto flex items-center justify-center"
+      data-action="click->modal#closeBackground keyup@window->modal#closeWithKeyboard"
+      data-modal-target="container"
+      style="z-index: 9999;" 
+      ]
+      /! Modal Inner Container
+      .max-h-screen.w-full.max-w-lg.relative
+        /! Modal Card
+        .m-1.bg-white.rounded.shadow
+          .p-8[data-autopickr-url-value="/entries/auto_search" 
+            data-controller="autopickr"
+            data-autopickr-slen-value="2"
+            data-autopickr-button-url-value="/demo/edit"]
+            = render partial:"accounts/ledger/pickr"
+            div
+              = check_box_tag('contains','no', false,class:"w3-left", data:{autopickr_target:"contains"},class:'mt-1') 
+              span.ml-3.align-top Use Contains Search
 
-                    .flex.justify-end.items-center.flex-wrap.mt-6
-                      button.bg-blue-500.hover:bg-blue-700.text-white.font-bold.py-2.px-4.rounded data-action="click->modal#close"  Cancel
+            .flex.justify-end.items-center.flex-wrap.mt-6
+              button.bg-blue-500.hover:bg-blue-700.text-white.font-bold.py-2.px-4.rounded data-action="click->modal#close"  Cancel
+  div
+    - if session[:recent][@account.id.to_s].present?
+      i.fa.fa-toggle-on = link_to("Toggle Recent Ledger",account_path(@account,toggle: true),class:'blue-link')
+    - else
+      i.fa.fa-toggle-off = link_to("Toggle Recent Ledger",account_path(@account,toggle: true),class:'blue-link')
+  div
+    i.fa.fa-toggle-off[data-controller="toggler" data-action="click->toggler#toggleChild" data-childClass="toggleMe"]
+      |&nbsp;
+      span[class="blue-link"] Toggle Summary
 
+div.bg-white
+  span.indent
+    strong Name: 
+    = @account.name
+  span.indent
+    strong Account type: 
+    = @account.account_type
+  span.indent
+    strong Parent: 
+    = @account.parent_id
+  span.indent
+    strong Code: 
+    = @account.code
+  span.indent
+    strong Description: 
+    = @account.description
+  span.indent
+    strong Placeholder: 
+    = @account.placeholder
 
+#summary.toggleMe.bg-white.pb-1
+  .grid.grid-cols-3
+    .col-span-1.p-2[style="max-height:20vh;overflow:scroll;"]
+      .strong =  "Account Summary (#{@today})"
+      = summary_list(@account)
+    .bg-blue-200.col-span-2.p-1[data-controller="dateRange" data-dateRange-url-value="accounts//#{@account.id}"]
+        
+      div.flex.flex-wrap
+        div
+          div.strong Filter - Select Period or Pick Date for Report Options
+          div
+            .w-1/2.inline-block = from_period_select
+            .w-1/2.inline-block = text_field_tag :from_date, nil,data:{dateRange_target:'from_date',controller:'flatpickr'},placeholder:'Pick From Date', class:'border '
+          div
+            .w-1/2.inline-block = to_period_select
+            .w-1/2.inline-block = text_field_tag :to_date, nil,data:{dateRange_target:'to_date',controller:'flatpickr'},placeholder:'Pick To Date', class:'border'
+        div
+          div.strong Display Filtered Ledger
+          = content_tag(:button,'Screen', class:"#{btnInfo} mr-2",
+            data:{action:"click->dateRange#assignDisplay"}) 
+          = content_tag(:button,'PDF', class:"#{btnInfo} mr-2",
+            data:{action:"click->dateRange#assignPdf"}) 
 
+          = content_tag(:button,'PDF Split', class:"#{btnInfo} mr-2",
+            data:{action:"click->dateRange#assignSplit"})                
 
-        / .m5.w3-col.w3-dropdown-hover
-
-          
-        /   / - unless @account.placeholder.present?
-        /   /   button.w3-left= link_to 'New Entry', new_entry_path(account_id:@account.id),class:'link-button'
-        /   /   |&nbsp;&nbsp
-        /   span.indent.w3-left.strong Search
-        /   div.w3-left[
-        /     data-controller="autocomplete entrySearch" 
-        /     data-autocomplete-url="/entries/auto_search" 
-        /     data-autocomplete-min-length="2"
-        /     ]
-        /     input[
-        /       type="text" 
-        /       data-autocomplete-target="input" 
-        /       placeholder="Entry Description Search" 
-        /       data-action="change->entrySearch#showSearched" 
-        /       style="width:300px;margin-right:8px;"
-        /     ]
-        /     input[
-        /     type="hidden" 
-        /     name="entry_id" 
-        /     data-autocomplete-target="hidden"
-        /     data-entrySearch-target="hidden"
-        /     ]
-        /     .w3-right.lime-link-button.w3-hide[
-        /       data-entrySearch-target="showButton" 
-        /       data-action="click->entrySearch#addSearched" 
-        /       data-entryID=""
-        /     ] Duplicate
-        /     ul.w3-ul.w3-border.w3-dropdown-content.w3-light-grey[data-autocomplete-target="results"]
-
-
-        .m5.w3-col
-          .w3-left
-            - if session[:recent][@account.id.to_s].present?
-              i.fa.fa-toggle-on = link_to("Toggle Recent Ledger",account_path(@account,toggle: true),class:'blue-link')
-            - else
-              i.fa.fa-toggle-off = link_to("Toggle Recent Ledger",account_path(@account,toggle: true),class:'blue-link')
-          .w3-left
-            |&nbsp; | &nbsp;
-            i.fa.fa-toggle-off[data-controller="toggler" data-action="click->toggler#toggleChild" data-childClass="toggleMe"]
-              |&nbsp;
-              span[class="blue-link"] Toggle Summary
-.w3-container.w3-white.min-height
-  .w3-row
-    .s12.w3-col
-      span.indent
-        strong Name: 
-        = @account.name
-      span.indent
-        strong Account type: 
-        = @account.account_type
-      span.indent
-        strong Parent: 
-        = @account.parent_id
-      span.indent
-        strong Code: 
-        = @account.code
-      span.indent
-        strong Description: 
-        = @account.description
-      span.indent
-        strong Placeholder: 
-        = @account.placeholder
-    #summary.toggleMe.w3-show.s12.w3-col
-
-      .w3-row.w3-margin
-        .w3-col.s4[style="max-height:20vh;overflow:scroll;"]
-          .strong =  "Account Summary (#{@today})"
-          = summary_list(@account)
-
-        .s8.w3-col.bg-blue-200.p-1
-          .w3-row-padding[data-controller="dateRange" data-dateRange-url-value="accounts//#{@account.id}"]
-            .s7.w3-col
-              .strong Filter - Select Period or Pick Date for Report Options
-              .w3-row-padding
-                .s7.w3-col = from_period_select
-                .s5.w3-col= text_field_tag :from_date, nil,data:{dateRange_target:'from_date',controller:'flatpickr'},placeholder:'Pick From Date', class:'border'
-                .s7.w3-col= to_period_select
-                .s5.w3-col= text_field_tag :to_date, nil,data:{dateRange_target:'to_date',controller:'flatpickr'},placeholder:'Pick To Date', class:'border'
-
-            .s5.w3-col
-              .strong Display Filtered Ledger/Register
-              = content_tag(:button,'Screen', class:"#{btnInfo} mr-2",
-                data:{action:"click->dateRange#assignDisplay"}) 
-              = content_tag(:button,'PDF', class:"#{btnInfo} mr-2",
-                data:{action:"click->dateRange#assignPdf"}) 
-
-              = content_tag(:button,'PDF Split', class:"#{btnInfo} mr-2",
-                data:{action:"click->dateRange#assignSplit"}) 
-
-
-
-        / .s8.w3-col
-        /   .w3-row-padding[data-controller="rangepicker"]
-        /     .s8.w3-col
-        /       .strong Filter - Select Period or Pick Date for Report Options
-        /       .w3-row
-        /         .s7.w3-col.entry-select = from_period_select
-        /         .s5.w3-col= text_field_tag :from_date, nil,data:{rangepicker_target:'from_date',controller:'flatpickr'},placeholder:'Pick From Date'
-        /         .s7.w3-col.entry-select= to_period_select
-        /         .s5.w3-col= text_field_tag :to_date, nil,data:{rangepicker_target:'to_date',controller:'flatpickr'},placeholder:'Pick To Date'
-
-        /     .s4.w3-col
-        /       .strong Report Options
-        /       = select_tag('register',options_for_select(report_select_options(nil,"/accounts/#{@account.id}")),prompt:"Register",data:{action:'rangepicker#selectLedger'},class:'entry-select w3-select')
-        /       = select_tag('register_pdf',options_for_select(report_select_options(nil,"/accounts/register_pdf/#{@account.id}")),prompt:"Register PDF",data:{action:'rangepicker#selectPDF'},class:'entry-select w3-select')
-        /       = select_tag('register_pdf',options_for_select(report_select_options(nil,"/accounts/split_register_pdf/#{@account.id}")),prompt:"Split Register PDF",data:{action:'rangepicker#selectSplit'},class:'entry-select w3-select')
-                 
-  #ajax.w3-container.w3-white
-
-    #Ledger
-      = render partial: 'accounts/ledger/ledger', locals:{from:@from,to:@to,account:@account}
+#Ledger.bg-white.mt-1
+  = render partial: 'accounts/ledger/ledger', locals:{from:@from,to:@to,account:@account}
 
